--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ENXPCW3309"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-ENXPCW3309');
+</script>
+<!-- End Google Analytics -->
   <meta charset="UTF-8" />
   <title>MD ATHAR Faiyaz | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -763,7 +772,7 @@
             </div>
             <div class="hero-meta-item">
               <div class="hero-meta-label">Location</div>
-              <div class="hero-meta-value">Tarwara Bazar, Siwan (Bihar) • Jaipur</div>
+              <div class="hero-meta-value">Tarwara Bazar, Siwan (Bihar) •</div>
             </div>
             <div class="hero-meta-item">
               <div class="hero-meta-label">Status</div>
@@ -777,7 +786,7 @@
             <div class="profile-badge">Fresher • Developer</div>
             <div class="profile-photo">
               <!-- You can place your own photo here:
-                   <img src="my-photo.jpg" alt="MD ATHAR Faiyaz" style="width:100%;height:100%;border-radius:50%;" />
+                   <img src="my-photo.jpg" alt="MD ATHAR FAIYAZ" style="width:100%;height:100%;border-radius:50%;" />
               -->
               <div class="profile-photo-inner">A</div>
             </div>
