--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </script>
 <!-- End Google Analytics -->
   <meta charset="UTF-8" />
-  <title>MD ATHAR Faiyaz | Portfolio</title>
+  <title>MD ATHAR FAIYAZ | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio of MD ATHAR Faiyaz - BCA (AI/DS) student and frontend developer." />
+  <meta name="description" content="Portfolio of MD ATHAR FAIYAZ - BCA (AI/DS) student and frontend developer." />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
