--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
             <div class="profile-badge">Fresher • Developer</div>
             <div class="profile-photo">
               <!-- You can place your own photo here:
-                   <img src="my-photo.jpg" alt="MD ATHAR FAIYAZ" style="width:100%;height:100%;border-radius:50%;" />
+                   <img src="about.png" alt="MD ATHAR FAIYAZ" style="width:100%;height:100%;border-radius:50%;object-fit:cover;" />
               -->
               <div class="profile-photo-inner">A</div>
             </div>
