--- a/index.html
+++ b/index.html
@@ -785,9 +785,11 @@
           <div class="profile-card">
             <div class="profile-badge">Fresher • Developer</div>
             <div class="profile-photo">
-              <!-- You can place your own photo here:
-                   <img src="about.png" alt="MD ATHAR FAIYAZ" style="width:100%;height:100%;border-radius:50%;object-fit:cover;" />
-              -->
+              <div class="profile-photo">
+    <img src="about.png" alt="MD ATHAR FAIYAZ"
+         style="width:100%;height:100%;border-radius:50%;object-fit:cover;" />
+    <div class="profile-photo-inner">A</div>
+</div>
               <div class="profile-photo-inner">A</div>
             </div>
             <div class="profile-name">MD ATHAR Faiyaz</div>
